syntax = "proto3";

package rpc;


service FbProxyService {
	  rpc GetAccessToken(UserToken) returns (UserToken) {}
	  rpc GetUserInfo(UserToken) returns (UserInfo) {}
}


message UserToken {
	string user_id = 1;
	string access_token = 2;
	uint64 expires_in = 3;
}


message UserInfo {
	string user_id = 1;
	string name = 2;
	string email = 3;
}
